# Cata-Log

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  README.md  THIRD_PARTY_LICENSES  TODO.md  install.md  pyproject.toml  pytest.ini  renovate.json
.gitea/ISSUE_TEMPLATE/: broken_provider.md  bugreport.md
.gitea/PULL_REQUEST_TEMPLATE/: stop.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: broken_provider.md  bugreport.md  feature_request.md
.gitlab/ci/: .gitlab-ci-build-docker.yml  .gitlab-ci-build-package.yml  .gitlab-ci-build.yml  .gitlab-ci-check-version.yml  .gitlab-ci-debug-build-docker.yml  .gitlab-ci-debug-build-package.yml  .gitlab-ci-debug-build.yml  .gitlab-ci-lint.yml  .gitlab-ci-optional-lint.yml  .gitlab-ci-release.yml  .gitlab-ci-test.yml
.gitlab/issue_templates/: broken_provider.md  bugreport.md  feature_request.md
.gitlab/merge_request_templates/: bugfix.md  feature_implementation.md  improved_docs.md  new_provider.md
docker/: Dockerfile  docker-compose.debug.yml  docker-compose.external-mariadb.yml  docker-compose.external-postgres.yml  docker-compose.minimal.yml  docker-compose.yml
docker/s6-overlay/s6-rc.d/celery-beat/: run
docker/s6-overlay/s6-rc.d/celery-worker/: run
docker/s6-overlay/s6-rc.d/fastapi/: run
docker/s6-overlay/s6-rc.d/migrations/: run
docs/: .gitignore  changelog.rst  code_of_conduct.rst  conf.py  configuration.rst  contact.rst  contributing-quickstart.rst  contributing.rst  contributors.rst  development.rst  faq.rst  how-to-add-plugin.rst  how-to-add-provider.rst  how-to-add-region.rst  how-to-reverse-engineer.rst  how-to.rst  index.rst  installation.rst  license.rst  modules.rst  plugins.rst  quickstart.rst  template-provider.py  template-provider.rst  todo.rst  troubleshooting.rst
src/cata_log/: __init__.py  __main__.py  __version__.py  app.py  config.py  constants.py  database.py  exceptions.py  health.py  jobs.py  logging.py  logging_config.py  main.py  opds.py  scheduler.py  security.py  settings.py  static.py  tasks.py  web.py
src/cata_log/api/: __init__.py  common.py  mixins.py
src/cata_log/api/v1/: __init__.py  catalogs.py  common.py  config.py  pages.py  pagination.py  providers.py
src/cata_log/catalogs/: aldi.py  base.py  edeka.py  kaufland.py  lidl.py  netto.py  norma.py  registry.py  rewe.py
src/cata_log/database/: __init__.py  mixins.py  models.py  signals.py  types.py  utils.py
src/cata_log/migrations/: alembic.ini  env.py
src/cata_log/migrations/versions/: 419a27d47a02_0001_initial.py  9567837bd78c_001.py
src/cata_log/opds/: __init__.py  utils.py
src/cata_log/providers/: __init__.py  action.py  aldi.py  aldi_nord.py  aldi_sued.py  base.py  configuration.py  edeka.py  hofer.py  kaufland.py  kik.py  lidl.py  metro.py  netto.py  norma.py  penny.py  plugins.py  regions.py  registry.py  rewe.py  rossmann.py
src/cata_log/utils/: dates.py  page_numbers.py  queries.py  shortcuts.py
src/cata_log/web/: __init__.py
src/cata_log/web/static/js/: catalog-viewer.js  config-form.js  provider-actions.js  provider-form.js
src/cata_log/web/templates/: base.html.jinja  catalog.html.jinja  config.html.jinja  dash.html.jinja  latest-provider-catalog.html.jinja  providers.html.jinja
src/cata_log/web/templates/layouts/: base.html.jinja  base_catalog.html.jinja
src/cata_log/web/templates/partials/: _config.html.jinja  _config_form.html.jinja  _default_config.html.jinja  _provider.html.jinja  _provider_form.html.jinja  _provider_info.html.jinja
src/cata_log_hub/: __init__.py  __main__.py  app.py  exceptions.py  health.py  jobs.py  logging.py  opds.py  scheduler.py  security.py  settings.py  static.py
src/cata_log_hub/api/: common.py  mixins.py
src/cata_log_hub/api/v1/: catalogs.py  models.py  pages.py  pagination.py  providers.py
src/cata_log_hub/database/: __init__.py  mixins.py  models.py  signals.py
src/cata_log_hub/migrations/: env.py
src/cata_log_hub/migrations/versions/: 419a27d47a02_0001_initial.py
src/cata_log_hub/providers/: action.py  aldi_nord.py  aldi_sued.py  base.py  edeka.py  hofer.py  kaufland.py  kik.py  lidl.py  metro.py  netto.py  norma.py  penny.py  plugins.py  regions.py  rewe.py  rossmann.py
src/cata_log_hub/utils/: dates.py  queries.py
src/cata_log_hub/web/: __init__.py
src/cata_log_hub/web/static/js/: catalog-viewer.js  provider-actions.js  provider-form.js
src/cata_log_hub/web/templates/: catalog.html.jinja
src/cata_log_hub/web/templates/partials/: _provider.html.jinja  _provider_form.html.jinja  _provider_info.html.jinja
test/: .coveragerc  pytest.ini
test/cata_log/: conftest.py  test_config.py  test_database.py  test_health.py  test_jobs.py  test_logging.py  test_main.py  test_opds.py  test_security.py  test_settings.py  test_static.py  test_tasks.py
test/cata_log/api/: conftest.py
test/cata_log/api/v1/: __init__.py  test_catalogs.py  test_config.py  test_pages.py  test_provider.py  test_providers.py
test/cata_log/database/: conftest.py  test_models.py
test/cata_log/providers/: test_base.py  test_norma.py  test_plugins.py  test_registered_classes.py  test_registry.py
test/cata_log/utils/: test_dates.py  test_page_numbers.py  test_shortcuts.py
test/cata_log/web/: test_web.py
test/cata_log_hub/: conftest.py  test_health.py  test_jobs.py  test_logging.py  test_opds.py  test_security.py  test_settings.py
test/cata_log_hub/api/v1/: test_catalogs.py  test_pages.py  test_providers.py
test/cata_log_hub/database/: test_models.py
test/cata_log_hub/providers/: test_base.py  test_plugins.py  test_registered_classes.py
test/cata_log_hub/utils/: test_dates.py  test_page_numbers.py
tools/: .codespellrc  .markdownlint.yml  djlintrc  doc8.ini  mypy.ini  pylintrc  ruff.toml
