[project]
name = "cata-log"
version = "0.1.0"
description = "The central hub for grocery store catalogues"
authors = [
    {name = "David Aderbauer & The Cata-Log Contributors", email = ""}
]
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.2",
    "celery-sqlalchemy-v2-scheduler>=0.1.2",
    "ebooklib>=0.20",
    "fake-useragent>=2.2.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "flower>=2.0.1",
    "opds>=0.1.1",
    "pillow>=12.1.1",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "stubs"},
    {include-group = "test"},
    "pip-licenses",
    "pre-commit",
]
docs = [
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.10.2",
    "sphinxcontrib-napoleon>=0.7",
]
lint = [
    "mypy[reports]",
    "ruff",
    "codespell",
    "djlint",
    "gitlab-ci-verify",
    "doc8",
]
stubs = [
    "celery-types>=0.26.0",
]
test = [
    "faker>=40.8.0",
    "freezegun>=1.5.5",
    "pyfakefs>=6.1.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.2.0",
    "pytest-httpx>=0.36.0",
]
