[project]
name = "cata-log"
version = "0.1.0"
description = "The central hub for grocery store catalogues"
authors = [
    {name = "David Aderbauer & The Cata-Log Contributors", email = "no@email.org"}
]
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = [
    "catalogs",
    "catalogues",
    "flyers",
    "server",
    "self-hosting",
    "api",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Other Audience",
    "Intended Audience :: End Users/Desktop",
    "Typing :: Typed",
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "ebooklib>=0.20",
    "fake-useragent>=2.2.0",
    "fastapi-pagination>=0.15.13",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "opds>=0.1.1",
    "pillow>=12.1.1",
    "platformdirs>=4.9.6",
    "psutil>=7.2.2",
    "pypdfium2>=5.8.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.48",
]

[project.optional-dependencies]
mysql = [
    "pymysql>=1.1.3",
]
postgres = [
    "pg8000>=1.31.5",
]

[project.urls]
Homepage = "https://pypi.org/project/cata-log/"
Issues = "https://gitlab.com/cata-log/cata-log/-/issues"
Documentation = "https://gitlab.com/cata-log/cata-log/-/blob/main/README.md"
Repository = "https://gitlab.com/cata-log/cata-log.git"
Changelog = "https://gitlab.com/cata-log/cata-log/-/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "stubs"},
    {include-group = "test"},
    "pip-licenses",
    "pre-commit",
]
docs = [
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.10.2",
    "sphinxawesome-theme>=6.0.2",
    "sphinxcontrib-napoleon>=0.7",
]
lint = [
    "mypy[reports]",
    "ruff",
    "codespell",
    "djlint",
    "gitlab-ci-verify",
    "doc8",
]
stubs = [
    "types-psutil>=7.2.2.20260408",
]
test = [
    "faker>=40.8.0",
    "faker-file>=0.19.1",
    "freezegun>=1.5.5",
    "pypdf>=6.11.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.2.0",
    "pytest-httpx>=0.36.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cata_log = ["**/migrations/**", "**/static/**", "**/templates/**"]
