[project]
name = "cata-log"
version = "0.1.0"
description = "The central hub for grocery store catalogues"
authors = [
    {name = "David Aderbauer & The Cata-Log Contributors", email = "no@email.org"}
]
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = [
    "catalogs",
    "catalogues",
    "flyers",
    "server",
    "self-hosting",
    "api",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Other Audience",
    "Intended Audience :: End Users/Desktop",
    "Typing :: Typed",
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic (>=1.18.4, <2.0.0)",
    "apscheduler (>=3.11.2, <4.0.0)",
    "cron-converter>=1.3.1,<2.0.0",
    "ebooklib (>=0.20, <1.0)",
    "fake-useragent (>=2.2.0, <3.0.0)",
    "fastapi-pagination (>=0.15.13, <1.0.0)",
    "fastapi[standard-no-fastapi-cloud-cli] (>=0.135.1, <1.0.0)",
    "opds (>=0.1.1, <1.0.0)",
    "pillow (>=12.1.1, <13.0.0)",
    "platformdirs (>=4.9.6, <5.0.0)",
    "psutil (>=7.2.2, <8.0.0)",
    "pypdfium2 (>=5.8.0, <6.0.0)",
    "python-json-logger (>=4.0.0, <5.0.0)",
    "sqlalchemy (>=2.0.48, <3.0.0)",
]

[project.optional-dependencies]
mysql = [
    "pymysql (>=1.1.3, <2.0.0)",
]
postgres = [
    "pg8000 (>=1.31.5, <2.0.0)",
]

[project.urls]
Homepage = "https://pypi.org/project/cata-log/"
Issues = "https://gitlab.com/cata-log/cata-log/-/issues"
Documentation = "https://gitlab.com/cata-log/cata-log/-/blob/main/README.md"
Repository = "https://gitlab.com/cata-log/cata-log.git"
Changelog = "https://gitlab.com/cata-log/cata-log/-/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "stubs"},
    {include-group = "test"},
    "pip-licenses",
    "pre-commit",
]
docs = [
    "myst-parser (>=5.0.0, <6.0.0)",
    "sphinx (>=9.1.0, <10.0.0)",
    "sphinx-autodoc-typehints (>=3.10.2, <4.0.0)",
    "sphinxawesome-theme (>=6.0.2, <7.0.0)",
    "sphinxcontrib-napoleon (>=0.7, <1.0)",
]
lint = [
    "mypy[reports]",
    "ruff",
    "codespell",
    "djlint",
    "gitlab-ci-verify",
    "doc8",
]
stubs = [
    "types-psutil (>=7.2.2.20260408, <8.0.0)",
]
test = [
    "faker (>=40.8.0, <41.0.0)",
    "faker-file (>=0.19.1, <1.0.0)",
    "freezegun (>=1.5.5, <2.0.0)",
    "pypdf (>=6.11.0, <7.0.0)",
    "pytest (>=9.0.2, <10.0.0)",
    "pytest-cov (>=7.0.0, <8.0.0)",
    "pytest-html (>=4.2.0, <5.0.0)",
    "pytest-httpx (>=0.36.0, <1.0.0)",
]

[tool.uv]
add-bounds = "major"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cata_log = ["**/migrations/**", "**/static/**", "**/templates/**"]
